                                 'srastrigin'  : shifted Rastrigin (CEC 2005),  
                                 'sgriewank'   : shifted Griewank (CEC 2005),  
                                 'sackley'     : shifted Ackley (CEC 2005),   
                                 'sschwefel1_2': shifted Schwefel's Problem 1.2 (CEC 2005)  

        o 'plot_convergence': -) the label 'Gbest' was replaced by "Global Optimum' in the title of the plot and in the label of the 'y' axis, in
                                 order to make it more intuitive to people non-familiar with PSO
        o 'read_particles'  : -) new argument 'do.pairs' (by default 'do.pairs=FALSE'), to control if the correlation matrix among parameters has to be plotted or not
                                 (up to hydroPSO <=0.1.58 it was always plotted)

        o 'plot_particles'  : -) new argument 'do.pairs' (by default 'do.pairs=FALSE'), to control if the correlation matrix among parameters has to be plotted or not
                                 (up to hydroPSO <=0.1.58 it was always plotted)
                              -) arguments 'MinMax' and 'beh.thr' are now passed to 'plot_NparOF'
                              -) arguments 'gofs', 'MinMax' and 'beh.thr' are now passed to 'params2ecdf'

        o 'plot_results'    : -) new argument 'do.pairs' (by default 'do.pairs=FALSE'), to control if the correlation matrix among parameters has to be plotted or not
                                 (up to hydroPSO <=0.1.58 it was always plotted)
                              -) default value for 'alpha' argument was changed from 1 to 0.65

        o 'plot_out'        : -) argument 'MinMax' is not required any more!
                              -) argument 'sim' may also be 'integer' (before it had to be 'numeric', which does not allow 'integer' objects !)  

        o 'plot_NparOF'     : -) new argument 'beh.thr' to allow selecting only behavioral parameter sets